add_subdirectory(Simulation)
add_subdirectory(Logging)
add_subdirectory(Memory)
add_subdirectory(Modeling)
add_subdirectory(Scheduling)
add_subdirectory(Parsing)
add_subdirectory(Timing)
add_subdirectory(Utils)
add_subdirectory(main)
add_subdirectory(old)

set(ALL_SOURCES ${ALL_SOURCES} PARENT_SCOPE)